[workspace]
members = [
    "crates/*",
]

[workspace.package]
license = "MIT"
edition = "2021"

[workspace.lints.rustdoc]
redundant_explicit_links = "allow"

[package]
name = "quake"
version = "0.1.0"
description = "A meta-build system powered by nushell"

license.workspace = true
edition.workspace = true

[dependencies]
quake_core = { path = "crates/quake_core" }
quake_engine = { path = "crates/quake_engine" }

clap = { version = "4.4.8", features = ["cargo", "wrap_help"] }
serde_json = "1.0.108"

[[bin]]
name = "quake"
path = "src/main.rs"
