[workspace]
members = [
    "crates/*",
]

[workspace.package]
license = "MIT"
edition = "2021"

[workspace.dependencies]
miette = "5.10.0"
nu-ansi-term = "0.49.0"
nu-cli = { git = "https://github.com/quake-build/nushell" }
nu-cmd-lang = { git = "https://github.com/quake-build/nushell" }
nu-command = { git = "https://github.com/quake-build/nushell", features = ["which-support"] }
nu-engine = { git = "https://github.com/quake-build/nushell" }
nu-parser = { git = "https://github.com/quake-build/nushell" }
nu-path = { git = "https://github.com/quake-build/nushell" }
nu-protocol = { git = "https://github.com/quake-build/nushell" }
nu-utils = { git = "https://github.com/quake-build/nushell" }
serde = { version = "1.0.196", features = ["derive"] }

[workspace.lints.rustdoc]
redundant_explicit_links = "allow"

[package]
name = "quake"
version = "0.1.0"
description = "A meta-build system powered by nushell"

license.workspace = true
edition.workspace = true

[dependencies]
quake_core = { path = "crates/quake_core" }
quake_engine = { path = "crates/quake_engine" }

clap = { version = "4.4.18", features = ["cargo", "wrap_help"] }
serde_json = "1.0.113"

[[bin]]
name = "quake"
path = "src/main.rs"
