[package]
name = "quake_core"
version = "0.1.0"

license.workspace = true
edition.workspace = true

[dependencies]
quake_errors = { path = "../quake_errors" }
quake_log = { path = "../quake_log" }

nu-protocol.workspace = true
parking_lot.workspace = true
serde = { workspace = true, features = ["rc"], optional = true }

[lints]
workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "parking_lot/serde"]
