[package]
name = "quake_engine"
version = "0.1.0"

license.workspace = true
edition.workspace = true

[dependencies]
quake_core = { path = "../quake_core" }
miette = "5.10.0"
nu-ansi-term = "0.49.0"
nu-cli = { git = "https://github.com/quake-build/nushell", branch = "expose-parser" }
nu-cmd-lang = { git = "https://github.com/quake-build/nushell", branch = "expose-parser" }
nu-command = { git = "https://github.com/quake-build/nushell", branch = "expose-parser", features = ["which-support"] }
nu-engine = { git = "https://github.com/quake-build/nushell", branch = "expose-parser" }
nu-parser = { git = "https://github.com/quake-build/nushell", branch = "expose-parser" }
nu-path = { git = "https://github.com/quake-build/nushell", branch = "expose-parser" }
nu-protocol = { git = "https://github.com/quake-build/nushell", branch = "expose-parser" }
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["rc"] }
tokio = { version = "1.35.1", features = ["full"] }

[target."cfg(windows)".dependencies]
nu-utils = { git = "https://github.com/quake-build/nushell", branch = "expose-parser" }

[lints]
workspace = true
