[package]
name = "quake_engine"
version = "0.1.0"

license.workspace = true
edition.workspace = true

[dependencies]
quake_core = { path = "../quake_core" }

nu-cli.workspace = true
nu-cmd-lang.workspace = true
nu-command.workspace = true
nu-engine.workspace = true
nu-parser.workspace = true
nu-path.workspace = true
nu-protocol.workspace = true
parking_lot = "0.12.1"
serde.workspace = true
tokio = { version = "1.36.0", features = ["full"] }

[target."cfg(windows)".dependencies]
nu-ansi-term.workspace = true
nu-utils.workspace = true

[lints]
workspace = true
