[package]
name = "quake_errors"
version = "0.1.0"

license.workspace = true
edition.workspace = true

[dependencies]
miette = "5.10.0"
nu-protocol = { git = "https://github.com/quake-build/nushell", branch = "expose-parser" }
serde = { version = "1.0.193", features = ["derive"], optional = true }
thiserror = "1.0.50"

[features]
serde = ["dep:serde"]

[lints]
workspace = true
